
Reworked rtcontrib program and renamed to rcontrib.  New version runs much
faster, especially on multiprocessor systems, and doesn't require as much
memory.  No longer calls rtrace; instead does all the work itself.

Added -d option to genskyvec to produce direct-only (sun no sky) vector.

Added Ashikhmin-Shirley anisotropic BRDF model (ashik2) with help
from Nicolas Boneel.

Added Ruby rewrite of objview.csh by Rob Guglielmetti.

Fixed bug in reciprocity for tensor tree BTDF representations.  Thanks
to Andy McNeil for identifying the problem.

Added MNAME and ZNAME variables to ranimove for debugging & testing.

Created pmblur2 command to take motion and depth buffers from ranimove
to compute a better motion blur.

****** COMPATIBILITY CHANGE ********
Changed BSDF routines to use updated/corrected XML specification and
removed depracated BSDF support from mkillum.

Fixed behavior of i/o flushing in rcontrib with -c > 1 (averaging).  Thanks
to Lars Grobe for help identifying this problem.

Fixed bug in depth-of-field blur where view distance was measured from
fore clipping plane rather than viewpoint.  Thanks to Peter A-B for
pointing this out.

Added options to dctimestep to allow multiple time steps (-n)
and multiple output pictures or sensor files (-o).  Also added -i
option to specify float (-if) or double (-id) input for sky matrix.

Created gendaymtx program to compute annual sky patch matrix based
on Ian Ashdown's implementation of Perez all-weather sky model.
Output can be sent directly to dctimestep in ASCII or binary stream.

Replaced existing gendaylit.c with improved version from Wendelin Sprenger
and Jan Wienold of ISE.

Improved accuracy of ambient calculation for large -ad settings.  Thanks
to Lars Grobe for noticing the problem.

Added -r option to gendaymtx to rotate the sky the specified number of
degrees about the zenith as suggested by A. McNeil.

Axel Jacobs added -pal eco color map that does a blue-red-yellow scale.